--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
     "react": "^18.2.0",
@@ -28,7 +29,8 @@
     "sass": "^1.70.0",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "react-toastify": "^9.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
