--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
+    "react-simple-image-viewer": "^1.2.2",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "redux-toolkit": "^1.1.2",
